# Asterism

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md  turbo.json
.github/workflows/: ci.yml
apps/backend/: .env.example  .gitignore  README.md  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  shared_types.py
apps/backend/asterism/: config.py  logging.py  main.py
apps/backend/asterism/internal/: db.py
apps/backend/asterism/models/: __init__.py  chat_session.py  folder.py  message.py  role.py  typedefs.py  user.py  user_role.py
apps/backend/asterism/repositories/: chat_repository.py  folder_repository.py  user_repository.py
apps/backend/asterism/routers/: __init__.py  auth.py  base.py  chat.py  file_router.py  folder_router.py  typedefs.py
apps/backend/asterism/schemas/: auth.py  chat.py  folders.py
apps/backend/asterism/utils/: security.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 2e009c8cf61c_initial_setup.py  523045891c5a_chatsession.py  9c1c0b8a12f0_user_role_rbac_and_setup_bootstrap.py  aab0c3c6dc2c_initial_setup.py  f42d8f111e5e_initial.py
apps/backend/tests/: conftest.py  test_auth_guards.py  test_auth_rbac.py  test_chat_router.py  test_main_openapi.py
apps/frontend/: .env.example  .prettierrc  (+8 more)
epics/: EPIC-1-FOUNDATIONS.md  EPIC-2-AUTH-AND-USER-MODEL.md  EPIC-3-PROFILES-AND-AGENTS.md  EPIC-4-CAPABILITY-REGISTRY.md  EPIC-5-AGENT-RUNTIME-AND-LOOPS.md  EPIC-6-MEMORY-SYSTEM.md  EPIC-7-CHAT-AND-UX.md  EPIC-8-OBSERVABILITY-HARDENING.md
(+71 files in other folders)
